[package]
edition = "2021"
name = "zcash-trees"
version = "0.1.0"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
hex = "0.4"
rayon = "1.10"
thiserror = "2.0"

bincode = {version = "2.0", features = ["serde"]}
blake2b_simd = "1.0"
chacha20 = "0.9"
halo2_gadgets = "0.3"
halo2_proofs = "0.3"
jubjub = "0.10"
secp256k1 = "0.29"
zip32 = "0.2"

orchard = {version = "0.11", features = ["unstable-frost"]}
sapling-crypto = "0.5"
zcash_encoding = "0.3"
zcash_protocol = {version = "0.7", features = ["local-consensus"]}
zcash_transparent = {version = "0.6", features = ["transparent-inputs"]}

incrementalmerkletree = {version = "0.8", optional = true}

[features]
imt = ["dep:incrementalmerkletree"]

[patch.crates-io]
orchard = {git = "https://github.com/hhanh00/orchard.git", rev = "f1943f696930c89b43e97756b3b8d818657be635"}

zcash_note_encryption = {git = "https://github.com/zcash/zcash_note_encryption.git", rev = "ede44ea608e667c78309c598fbf4d70f69c15c29"}

pczt = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
sapling-crypto = {git = "https://github.com/zcash/sapling-crypto.git", rev = "0475817b60fced17ec59b0c9412d2b2d29ef529f"}
zcash_address = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zcash_encoding = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zcash_keys = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zcash_primitives = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zcash_proofs = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zcash_protocol = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zcash_transparent = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zip321 = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
